# digestif

./: .gitignore  .travis.yml  INSTALL.md  LICENSE  LICENSE.md  README.md  digestif-dev-1.rockspec  spec.cabal
data/: amsrefs.sty.tags  amssymb.sty.tags  biblatex.sty.tags  cleveref.sty.tags  context.tags  csquotes.sty.tags  etoolbox.sty.tags  excerpts-teximpatient.tags  hyperref.sty.tags  latex-prog.tags  latex.tags  natbib.sty.tags  pgf.sty.tags  pgf.tags  plain.tags  primitives.tags  t-tikz.xml.tags  teximpatient.tags  texinfo.tags  tikz.sty.tags  tikz.tags  unicode-math.sty.tags  xparse.sty.tags
digestif/: Cache.lua  Document.lua  FileCache.lua  Manuscript.lua  ManuscriptBibTeX.lua  ManuscriptConTeXt.lua  ManuscriptDoctex.lua  ManuscriptLaTeX.lua  ManuscriptLatexProg.lua  ManuscriptPlainTeX.lua  ManuscriptTexinfo.lua  Parser.lua  Schema.lua  bibtex.lua  config.lua  data.lua  detexify.lua  langserver.lua  latex.lua  util.lua
digestif-data/: amssymb.sty.lua  context.lua  latex-latexrefman.lua  latex.lua  pgf-extracted.lua  pgf.lua  plain-symbols.lua  plain.lua  primitives.lua  tikz.lua  tikz.sty.lua  unicode-math-symbols.lua  unicode-math.sty.lua
rockspec/: digestif-0.1-1.rockspec  digestif-0.1.rockspec  digestif-scm-1.rockspec
scripts/: digestif  digestif.cmd  extract-context.lua  extract-ltxdockit.lua  extract-pgfmanual.lua  extract-teximpatient.lua  extract-unicode-math-table.lua  update-license.lua
spec/: cache_spec.lua  context_spec.lua  data_spec.lua  latex_spec.lua  manuscript_spec.lua  parser_spec.lua  requirements.txt  schema_spec.lua  test-lsp.hs  (+3 more)
(+13 files in other folders)
