name: spec
version: 0
build-type: Simple
cabal-version: >= 2.0

test-suite test-lsp
  type:          exitcode-stdio-1.0
  main-is:       spec/test-lsp.hs
  build-depends: base
               , lens
               , text
               , hspec
               , haskell-lsp
               , lsp-test
  default-language: Haskell2010
